add static html

--- a/mysite/web_cn/templates/index.html
+++ b/mysite/web_cn/templates/index.html
@@ -1,1 +1,6 @@
+{% load static %}
+<head>
+    <link rel="stylesheet" type="text/css" href="{% static 'website/style.css' %}"
+</head>
+
 <h1>Homepage</h1>
