--- a/mysite/web_cn/templates/history.html
+++ b/mysite/web_cn/templates/history.html
@@ -9,6 +9,12 @@
     }
 </style>
 
+<div class="navbar">
+    <a href="manage">委託單管理</a>
+    <a href="add">新增委託單</a>
+    <a href="history">查詢歷史委託單</a>
+</div>
+
 <h1>歷史紀錄</h1>
 
 <table>
@@ -23,10 +29,10 @@
     <tbody>
         {% for row in results %}
             <tr>
-                <td>{{ row.3}}</td>
                 <td>{{row.0}}</td>
-                <td>{{row.1}}</td>
+                <td>{{row.3}}</td>
                 <td>{{row.2}}</td>
+                <td>{{row.1}}</td>
             </tr>
         {% endfor %}
     </tbody>
