--- a/mysite/web_cn/templates/history.html
+++ b/mysite/web_cn/templates/history.html
@@ -24,6 +24,7 @@
             <th>Factory</th>
             <th>Priority</th>
             <th>Lab</th>
+            <th>Status</th>
         </tr>
     </thead>
     <tbody>
@@ -33,6 +34,7 @@
                 <td>{{row.3}}</td>
                 <td>{{row.2}}</td>
                 <td>{{row.1}}</td>
+                <td>{{row.4}}</td>
             </tr>
         {% endfor %}
     </tbody>
