fix: table set, not done

--- a/mysite/web_cn/templates/history.html
+++ b/mysite/web_cn/templates/history.html
@@ -16,8 +16,10 @@
         <tr>
             <th>Request ID</th>
             <th>Factory</th>
-            <th>Priority</th>
+            <th>Priority Type</th>
             <th>Lab</th>
+            <th>Current Priority</th>
+            <th>Status</th>
         </tr>
     </thead>
     <tbody>
@@ -27,6 +29,8 @@
                 <td>{{row.0}}</td>
                 <td>{{row.1}}</td>
                 <td>{{row.2}}</td>
+                <td>{{row.4}}</td>
+                <td>{{row.5}}</td>
             </tr>
         {% endfor %}
     </tbody>
