feat: modify table set

--- a/mysite/web_cn/templates/history.html
+++ b/mysite/web_cn/templates/history.html
@@ -16,17 +16,21 @@
         <tr>
             <th>Request ID</th>
             <th>Factory</th>
-            <th>Priority</th>
+            <th>Priority Type</th>
             <th>Lab</th>
+            <th>Current Priority</th>
+            <th>Status</th>
         </tr>
     </thead>
     <tbody>
         {% for row in results %}
             <tr>
-                <td>{{ row.3}}</td>
-                <td>{{row.0}}</td>
+                <td>{{ row.0}}</td>
                 <td>{{row.1}}</td>
                 <td>{{row.2}}</td>
+                <td>{{row.3}}</td>
+                <td>{{row.4}}</td>
+                <td>{{row.5}}</td>
             </tr>
         {% endfor %}
     </tbody>
