--- a/mysite/web_cn/templates/history.html
+++ b/mysite/web_cn/templates/history.html
@@ -25,6 +25,7 @@
             <th>Priority</th>
             <th>Lab</th>
             <th>Status</th>
+            <th>Attachment</th>
         </tr>
     </thead>
     <tbody>
@@ -35,6 +36,7 @@
                 <td>{{row.2}}</td>
                 <td>{{row.1}}</td>
                 <td>{{row.4}}</td>
+                <td><a href="media/{{ row.5 }}" target="_blank">{{ row.5 }}</a></td>
             </tr>
         {% endfor %}
     </tbody>
