--- a/mysite/web_cn/templates/history.html
+++ b/mysite/web_cn/templates/history.html
@@ -24,6 +24,7 @@
             <th>Factory</th>
             <th>Priority Type</th>
             <th>Lab</th>
+            <th>Current Priority</th>
             <th>Status</th>
             <th>Attachment</th>
         </tr>
@@ -36,7 +37,8 @@
                 <td>{{row.2}}</td>
                 <td>{{row.1}}</td>
                 <td>{{row.4}}</td>
-                <td><a href="media/{{ row.5 }}" target="_blank">{{ row.5 }}</a></td>
+                <td>{{row.5}}</td>
+                <td><a href="media/{{ row.6 }}" target="_blank">{{ row.6 }}</a></td>
             </tr>
         {% endfor %}
     </tbody>
