--- a/mysite/web_cn/templates/manage.html
+++ b/mysite/web_cn/templates/manage.html
@@ -32,6 +32,7 @@
             <th>Factory</th>
             <th>Priority</th>
             <th>Lab</th>
+            <th>Current Priority</th>
             <th>Status</th>
             <th>Attachment</th>
             <th>Actions</th>
@@ -39,14 +40,15 @@
     </thead>
     <tbody>
         {% for row in results %}
-            {% if row.4 == '進行中' %}
+            {% if row.5 == '進行中' %}
                 <tr>
                     <td>{{ row.0 }}</td>
                     <td>{{ row.3 }}</td>
                     <td>{{ row.2 }}</td>
                     <td>{{ row.1 }}</td>
                     <td>{{ row.4 }}</td>
-                    <td><a href="media/{{ row.5 }}" target="_blank">{{ row.5 }}</a></td>
+                    <td>{{ row.5 }}</td>
+                    <td><a href="media/{{ row.6 }}" target="_blank">{{ row.6 }}</a></td>
                     <td class="button-container">
                         <button onclick="completeRequest('{{ row.0 }}')">完成</button>
                         <button onclick="deleteRequest('{{ row.0 }}')">刪除</button>
