--- a/mysite/web_cn/templates/manage.html
+++ b/mysite/web_cn/templates/manage.html
@@ -50,8 +50,8 @@
                     <td>{{ row.5 }}</td>
                     <td><a href="media/{{ row.6 }}" target="_blank">{{ row.6 }}</a></td>
                     <td class="button-container">
-                        <button onclick="submitOrder('{{ row.0 }}', this)" {% if row.8 %}disabled{% endif %}>送出</button>
-                        <button onclick="completeRequest('{{ row.0 }}', this)" {% if not row.8 %}disabled{% endif %}>完成 ({{ row.7 }})</button>
+                        <button onclick="submitOrder('{{ row.0 }}', this)" {% if row.7 %}disabled{% endif %}>送出</button>
+                        <button onclick="completeRequest('{{ row.0 }}', this)" {% if not row.7 or row.8 %}disabled{% endif %}>完成</button>
                         <button onclick="deleteRequest('{{ row.0 }}')">刪除</button>
                     </td>
                 </tr>
@@ -74,11 +74,11 @@
         }).then(response => response.json())
           .then(data => {
               if (url === '/complete_order/') {
-                  if (data.remaining_counts > 0) {
-                      button.innerText = `完成 (${data.remaining_counts})`;
-                  } else {
-                      location.reload();
+                  if (data.is_completed) {
+                      button.innerText = '完成';
+                      button.disabled = true;
                   }
+                  location.reload();
               } else if (url === '/submit_order/') {
                   button.disabled = true;
                   button.nextElementSibling.disabled = false;
