--- a/mysite/web_cn/templates/manage.html
+++ b/mysite/web_cn/templates/manage.html
@@ -51,7 +51,7 @@
                     <td><a href="media/{{ row.6 }}" target="_blank">{{ row.6 }}</a></td>
                     <td class="button-container">
                         <button onclick="submitOrder('{{ row.0 }}', this)" {% if row.7 %}disabled{% endif %}>送出</button>
-                        <button onclick="completeRequest('{{ row.0 }}', this)" {% if not row.7 or row.8 %}disabled{% endif %}>完成</button>
+                        <button onclick="completeRequest('{{ row.0 }}', this)" {% if not row.7 or row.8 %}disabled{% endif %}>允許</button>
                         <button onclick="deleteRequest('{{ row.0 }}')">刪除</button>
                     </td>
                 </tr>
@@ -75,7 +75,7 @@
           .then(data => {
               if (url === '/complete_order/') {
                   if (data.is_completed) {
-                      button.innerText = '完成';
+                      button.innerText = '允許';
                       button.disabled = true;
                   } else {
                       alert(data.error);
