add absolute path in html file, add HttpResponseBadRequest import

--- a/mysite/web_cn/templates/history.html
+++ b/mysite/web_cn/templates/history.html
@@ -10,9 +10,9 @@
 </style>
 
 <div class="navbar">
-    <a href="manage">委託單管理</a>
-    <a href="add">新增委託單</a>
-    <a href="history">查詢歷史委託單</a>
+    <a href="/manage">委託單管理</a>
+    <a href="/add">新增委託單</a>
+    <a href="/history">查詢歷史委託單</a>
 </div>
 
 <h1>歷史紀錄</h1>
