--- a/mysite/web_cn/templates/add.html
+++ b/mysite/web_cn/templates/add.html
@@ -61,9 +61,9 @@
 <body>
 
     <div class="navbar">
-        <a href="manage">委託單管理</a>
-        <a href="add">新增委託單</a>
-        <a href="history">查詢歷史委託單</a>
+        <a href="/manage">委託單管理</a>
+        <a href="/add">新增委託單</a>
+        <a href="/history">查詢歷史委託單</a>
     </div>
 
     <div class="form-container">
