--- a/mysite/web_cn/templates/register.html
+++ b/mysite/web_cn/templates/register.html
@@ -11,7 +11,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 110vh;
+            height: 100vh;
             background: #fff;
         }
 
@@ -25,9 +25,9 @@
         }
 
         h2 {
-            margin-bottom: 10px;
+            margin-bottom: 20px;
             color: #333;
-            font-size: 20px;
+            font-size: 24px;
         }
 
         .form-container {
@@ -41,7 +41,7 @@
             width: 100%;
         }
 
-        input[type="text"], input[type="password"] {
+        input[type="text"], input[type="email"], input[type="password"] {
             width: 100%;
             padding: 12px;
             margin-top: 5px;
@@ -66,6 +66,12 @@
         .btn:hover {
             background-color: #4cae4c;
         }
+
+        .errorlist {
+            color: red;
+            list-style-type: none;
+            padding-left: 0;
+        }
     </style>
 </head>
 <body>
@@ -73,9 +79,29 @@
         <h2>Register</h2>
         <form method="post" class="form-container">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form.non_field_errors }}
+            <p>
+                <label for="id_username">Username:</label>
+                {{ form.username }}
+                {{ form.username.errors }}
+            </p>
+            <p>
+                <label for="id_email">Email:</label>
+                {{ form.email }}
+                {{ form.email.errors }}
+            </p>
+            <p>
+                <label for="id_password1">Password:</label>
+                {{ form.password1 }}
+                {{ form.password1.errors }}
+            </p>
+            <p>
+                <label for="id_password2">Confirm Password:</label>
+                {{ form.password2 }}
+                {{ form.password2.errors }}
+            </p>
             <button type="submit" class="btn">Register</button>
         </form>
-    </div> 
+    </div>
 </body>
 </html>
