--- a/mysite/web_cn/templates/manage.html
+++ b/mysite/web_cn/templates/manage.html
@@ -125,6 +125,9 @@
                 </tr>
             {% endif %}
         {% endfor %}
+        <tr class="count-row">
+            <td colspan="9">進行中的單數: {{ ongoing_count }}</td>
+        </tr>
     </tbody>
 </table>
 </div>
