add Fab order count

--- a/mysite/web_cn/templates/manage.html
+++ b/mysite/web_cn/templates/manage.html
@@ -126,7 +126,16 @@
             {% endif %}
         {% endfor %}
         <tr class="count-row">
-            <td colspan="9">進行中的單數: {{ ongoing_count }}</td>
+            <td colspan="9">Fab A 進行中的單數: {{ fab_a_count }}</td>
+        </tr>
+        <tr class="count-row">
+            <td colspan="9">Fab B 進行中的單數: {{ fab_b_count }}</td>
+        </tr>
+        <tr class="count-row">
+            <td colspan="9">Fab C 進行中的單數: {{ fab_c_count }}</td>
+        </tr>
+        <tr class="count-row">
+            <td colspan="9">Total 進行中的單數: {{ ongoing_count }}</td>
         </tr>
     </tbody>
 </table>
