--- a/mysite/web_cn/templates/add.html
+++ b/mysite/web_cn/templates/add.html
@@ -62,6 +62,7 @@
 
     <div class="navbar">
         <a href="/manage">委託單管理</a>
+        <a href="/add">新增委託單</a>
         <a href="/history">查詢歷史委託單</a>
     </div>
 
