--- a/mysite/web_cn/templates/user_list.html
+++ b/mysite/web_cn/templates/user_list.html
@@ -28,11 +28,13 @@
         <tr>
             <th>Username</th>
             <th>Email</th>
+            <th>Group</th>
         </tr>
         {% for user in users %}
         <tr>
             <td>{{ user.username }}</td>
             <td>{{ user.email }}</td>
+            <td>{{ user.groups__name }}</td>
         </tr>
         {% endfor %}
     </table>
