--- a/mysite/web_cn/templates/login.html
+++ b/mysite/web_cn/templates/login.html
@@ -7,11 +7,10 @@
             font-family: Arial, sans-serif;
             background-color: #f4f4f9;
             margin: 0;
-            padding: 0;
+            padding: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
         }
 
         .container {
