--- a/mysite/web_cn/templates/register.html
+++ b/mysite/web_cn/templates/register.html
@@ -7,12 +7,10 @@
             font-family: Arial, sans-serif;
             background-color: #f4f4f9;
             margin: 0;
-            padding: 0;
+            padding: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            background: #fff;
         }
 
         .container {
@@ -37,15 +35,15 @@
         }
 
         .form-container p {
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             width: 100%;
         }
 
         input[type="text"], input[type="email"], input[type="password"] {
             width: 100%;
-            padding: 12px;
+            padding: 10px;
             margin-top: 5px;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
             border: 1px solid #ccc;
             border-radius: 5px;
             box-sizing: border-box;
@@ -72,6 +70,20 @@
             list-style-type: none;
             padding-left: 0;
         }
+
+        .form-group {
+            width: 100%;
+        }
+
+        .form-group select {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+            font-size: 16px;
+        }
     </style>
 </head>
 <body>
@@ -80,6 +92,17 @@
         <form method="post" class="form-container">
             {% csrf_token %}
             {{ form.non_field_errors }}
+            <p>
+                <div class="form-group">
+                    <label for="id_group">Group:</label>
+                    <select id="id_group" name="group" required>
+                        <option value="化學實驗室">化學實驗室</option>
+                        <option value="表面分析實驗室">表面分析實驗室</option>
+                        <option value="成分分析實驗室">成分分析實驗室</option>
+                    </select>
+                    {{ form.group.errors }}
+                </div>
+            </p>
             <p>
                 <label for="id_username">Username:</label>
                 {{ form.username }}
