--- a/mysite/web_cn/templates/add.html
+++ b/mysite/web_cn/templates/add.html
@@ -16,6 +16,7 @@
             padding: 10px;
             display: flex;
             justify-content: center;
+            position:relative;
         }
         .navbar a {
             color: #fff;
@@ -25,6 +26,20 @@
             margin: 0 10px;
         }
         .navbar a:hover {
+            background-color: #0056b3;
+        }
+        .status {
+            position: absolute;
+            right: 32px;
+            top: 44px;
+        }
+        .status a {
+            color: #fff;
+            padding: 14px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+        .status a:hover {
             background-color: #0056b3;
         }
         .form-container {
@@ -64,6 +79,17 @@
         <a href="/manage">委託單管理</a>
         <a href="/add">新增委託單</a>
         <a href="/history">查詢歷史委託單</a>
+    </div>
+    <div class="status">
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">{{ user.username }} 登出</a>
+            <form id="logout-form" action="{% url 'logout' %}" method="post" style="display: none;">
+                {% csrf_token %}
+            </form>
+        {% else %}
+            <a href="{% url 'login' %}">登入</a>
+            <a href="/register">註冊</a>
+        {% endif %}
     </div>
 
     <div class="form-container">
