--- a/mysite/web_cn/templates/manage.html
+++ b/mysite/web_cn/templates/manage.html
@@ -27,6 +27,20 @@
         .navbar a:hover {
             background-color: #0056b3;
         }
+        .status {
+            position: absolute;
+            right: 32px;
+            top: 44px;
+        }
+        .status a {
+            color: #fff;
+            padding: 14px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+        .status a:hover {
+            background-color: #0056b3;
+        }
         h1 {
             text-align: center;
             color: #333;
@@ -111,6 +125,17 @@
     <a href="/manage">委託單管理</a>
     <a href="/add">新增委託單</a>
     <a href="/history">查詢歷史委託單</a>
+</div>
+<div class="status">
+    {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">{{ user.username }} 登出</a>
+        <form id="logout-form" action="{% url 'logout' %}" method="post" style="display: none;">
+            {% csrf_token %}
+        </form>
+    {% else %}
+        <a href="{% url 'login' %}">登入</a>
+        <a href="/register">註冊</a>
+    {% endif %}
 </div>
 
 <div class="table-container">
