feat/page_change

--- a/mysite/web_cn/templates/register.html
+++ b/mysite/web_cn/templates/register.html
@@ -101,7 +101,7 @@
                         <option value="成分分析實驗室">成分分析實驗室</option>
                         <option value="Fab A">Fab A</option>
                         <option value="Fab B">Fab B</option>
-                        <option value="Fac C">Fab C</option>
+                        <option value="Fab C">Fab C</option>
                     </select>
                     {{ form.group.errors }}
                 </div>
