fix Fab C count

--- a/mysite/web_cn/templates/add.html
+++ b/mysite/web_cn/templates/add.html
@@ -101,7 +101,7 @@
                 <select id="factory" name="factory" required>
                     <option value="Fab A">Fab A</option>
                     <option value="Fab B">Fab B</option>
-                    <option value="Fac C">Fab C</option>
+                    <option value="Fab C">Fab C</option>
                 </select>
             </div>
             <div class="form-group">
